--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,78 @@
 </head>
 
 <body>
+<div class="orientation-banner has-text-centered">
+    <h2>Rotate your Device</h2>
+    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+         viewBox="0 0 512.002 512.002" style="width:50px;enable-background:new 0 0 512.002 512.002;" xml:space="preserve">
+<g>
+	<g>
+		<path d="M459.649,278.626L233.377,52.354c-12.512-12.48-32.736-12.48-45.248,0L52.353,188.13c-12.48,12.48-12.48,32.768,0,45.248
+			L278.625,459.65c6.24,6.24,14.432,9.344,22.624,9.344c8.192,0,16.384-3.136,22.624-9.344l135.776-135.776
+			C472.129,311.394,472.129,291.106,459.649,278.626z M74.977,210.754L210.753,74.978l22.624,22.624L97.601,233.378L74.977,210.754z
+			 M256.001,391.778L120.225,256.002l135.776-135.776l135.776,135.776L256.001,391.778z M301.249,437.026l-22.624-22.624
+			l135.776-135.776l22.624,22.624L301.249,437.026z"/>
+	</g>
+</g>
+        <g>
+	<g>
+		<path d="M159.681,488.034c-0.064-0.384,0.064-0.768,0-1.184l-16-74.24c-1.888-8.64-10.464-14.144-19.04-12.256
+			c-8.64,1.856-14.112,10.368-12.288,19.008l8.32,38.624C65.377,419.65,32.001,357.282,32.001,288.002c0-8.832-7.168-16-16-16
+			c-8.832,0-16,7.168-16,16c0,76.032,35.008,144.576,93.248,189.248l-46.208,2.784c-8.8,0.544-15.52,8.096-15.008,16.928
+			c0.512,8.48,7.552,15.04,15.968,15.04c0.32,0,0.64,0,0.96-0.032l96-5.76c0.16,0,0.288-0.096,0.48-0.128
+			c0.64-0.064,1.312-0.064,1.952-0.192c0.672-0.16,1.184-0.576,1.824-0.8c0.928-0.32,1.856-0.608,2.688-1.088
+			c0.288-0.16,0.544-0.256,0.832-0.448c0.672-0.448,1.184-1.024,1.792-1.568c0.768-0.704,1.472-1.376,2.112-2.208
+			c0.512-0.672,0.96-1.376,1.344-2.144c0.128-0.256,0.416-0.32,0.512-0.576c0.128-0.256,0.096-0.512,0.192-0.768
+			c0.256-0.608,0.416-1.248,0.608-1.888c0.224-0.8,0.352-1.568,0.448-2.368c0.032-0.672,0.128-1.312,0.128-1.984
+			c0-0.256,0.128-0.48,0.096-0.768C159.937,488.834,159.713,488.482,159.681,488.034z"/>
+	</g>
+</g>
+        <g>
+	<g>
+		<path d="M418.753,34.754l46.208-2.784c8.8-0.544,15.52-8.096,15.008-16.928c-0.512-8.8-7.136-15.584-16.928-15.008l-96,5.76
+			c-0.416,0.032-0.768,0.256-1.184,0.32c-0.416,0.064-0.8-0.064-1.216,0c-0.352,0.064-0.608,0.32-0.96,0.416
+			c-0.64,0.192-1.248,0.384-1.856,0.64c-0.672,0.288-1.28,0.64-1.92,1.024c-0.608,0.352-1.184,0.704-1.76,1.152
+			c-0.48,0.384-0.928,0.768-1.376,1.216c-0.512,0.512-0.928,1.056-1.376,1.632c-0.48,0.608-0.864,1.216-1.248,1.888
+			c-0.16,0.32-0.48,0.512-0.608,0.832c-0.128,0.256-0.096,0.512-0.192,0.768c-0.256,0.608-0.416,1.248-0.608,1.888
+			c-0.224,0.8-0.352,1.568-0.448,2.4c-0.064,0.672-0.16,1.312-0.16,1.984c0,0.256-0.128,0.512-0.096,0.768
+			c0.032,0.416,0.256,0.768,0.288,1.152c0.064,0.416-0.064,0.832,0,1.248l16,74.24c1.664,7.52,8.288,12.64,15.648,12.64
+			c1.12,0,2.272-0.096,3.392-0.352c8.64-1.856,14.112-10.368,12.288-19.008l-8.32-38.656
+			c55.296,38.368,88.672,100.736,88.672,170.016c0,8.832,7.168,16,16,16c8.832,0,16-7.168,16-16
+			C512.001,147.97,476.993,79.426,418.753,34.754z"/>
+	</g>
+    </g>
+        <g>
+    </g>
+        <g>
+    </g>
+        <g>
+    </g>
+        <g>
+    </g>
+        <g>
+    </g>
+        <g>
+    </g>
+        <g>
+    </g>
+        <g>
+    </g>
+        <g>
+    </g>
+        <g>
+    </g>
+        <g>
+    </g>
+        <g>
+    </g>
+        <g>
+    </g>
+        <g>
+    </g>
+        <g>
+    </g>
+    </svg>
+</div>
 <section class="hero is-fullheight is-light" >
     <div class="hero-body  p-b-30 ">
         <div class="container">
@@ -50,9 +122,13 @@
     <button id="close-error" class="delete"></button>
     <p th:inline="text">[[${error}]]</p>
 </div>
-<footer class="has-background-black has-text-centered p-4 has-text-white">
+<footer class="has-background-black has-text-centered has-text-white">
     Crafted with <span class="fas fa-heart"></span> by <a href="https://pagalprogrammer.dev">pagalprogrammer</a> | Background Photo by Ketut Subiyanto from <a href="https://www.pexels.com/photo/woman-wearing-a-face-mask-on-the-subway-and-using-her-smartphone-4429297/">Pexels</a>
 </footer>
-<script src="/scripts/main.js"></script>
+<script th:if="${error}">
+    document.getElementById("close-error").addEventListener("click", function () {
+        document.getElementsByClassName('notification')[0].style.display = "none";
+    });
+</script>
 </body>
 </html>
